# toolkit-py

./: .drone.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-publish.yml  python-test.yml
change_encoding/: __init__.py  command.py  whitespace.py
create_config_file/: README.md  __init__.py  alias.py  clash.py  command.py  common.py  git.py  hosts.py  notes.py  powershell.py  python.py  vim.py
create_config_file/templates/: Microsoft.PowerShell_profile.ps1  (+1 more)
deprecated/: __init__.py  cclear.py  external_ip.py
image_hosting_service/: __init__.py  command.py  common.py  jd.py
open_source_mirror/: __init__.py  command.py  golang.py  java.py  python.py  raspberrypi.py  ubuntu.py
pkgs/: __init__.py  cclear.py  external_ip.py  mirrors.py  reproduce.py
project_scaffold/: README.md  __init__.py  c.py  command.py  common.py  debug.py  docker.py  example.py  golang.py  kotlin.py  notes.py  prefect.py  python.py  qml.py  render.py  reproduce.py
project_scaffold/templates/c/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
project_scaffold/templates/qml/: .gitignore  CMakeLists.txt  Makefile  logo.rc  qml.qrc
project_scaffold/templates/qml/src/: CMakeLists.txt  main.cpp  version.ini
project_scaffold/templates/qml/src/api/: request.cpp  request.h  websocket.cpp  websocket.h
project_scaffold/templates/qml/src/config/: config.cpp  config.h  logger.cpp  logger.h
project_scaffold/templates/qml/src/utils/: crypto.cpp  crypto.h  datetime.cpp  datetime.h  image_provider.h  region.cpp  region.h  utils.cpp  utils.h
project_scaffold/templates/qt5/: .clang-format  .gitignore  CMakeLists.txt  ExamplePage.qml  ExamplePage.qml.qml  MainForm.ui.qml.qml  Makefile  README.md  core.cpp  core.h  core.qml.cpp  core.qml.h  http_client.qml.ts  http_client.ts  image_provider.qml.cpp  image_provider.qml.h  main.console.cpp  main.cpp  main.gui.cpp  main.qml.cpp  main.qml.js  main.qml.qml  qml.qml.qrc  serial_port.cpp  serial_port.h  version_ini.h  widget.cpp  widget.gui.cpp  widget.gui.h  widget.h  widget.ui  worker.cpp  worker.h
project_scaffold/templates/qt5/assets/data/: CodeParent.json  CodeRegion.json
project_scaffold/templates/qt5/auto_type/: auto_type.h  key_code.h
project_scaffold/templates/qt5/auto_type/win32/: auto_type.cpp  auto_type_win32.cpp  key_map.cpp  key_map.h
project_scaffold/templates/qt5/debug_tools/: crash_stack.cpp  crash_stack.h
project_scaffold/templates/qt5/http_client/: auth.cpp  auth.h  request.cpp  request.h
scripts/: __init__.py  mirrors.py  reproduce.py  upload_images.py
source_mirror/: mirrors.py
tests/: __init__.py  confitest.py  test_auto_unzip.py  test_change_encoding.py  test_cli.py  test_notes_append_header.py  test_render_template.py  test_toolkit.py  test_upload_image.py  test_user_agent.py  test_whitespace.py
toolkit/: __init__.py  _version.py  cli.py  logger.py
toolkit/template/scaffold/project/cpp/example/: CMakeLists.txt  README.md
toolkit/template/scaffold/project/cpp/qt5/console/: CMakeLists.txt  main.cpp
toolkit/template/scaffold/project/cpp/qt5/example/console/: CMakeLists.txt
toolkit/template/scaffold/project/cpp/qt5/example/qml/: CMakeLists.txt  core.h  main.cpp  main.qml  qml.qrc  {{project_slug.pascal_case}}.qml
toolkit/template/scaffold/project/cpp/qt5/qml/: CMakeLists.txt  ChineseSimplified.isl  Makefile  inno_setup.ini  qml.qrc
toolkit/template/scaffold/project/cpp/qt5/qml/include/: README.md
toolkit/template/scaffold/project/cpp/qt5/qml/installer/: README.md
toolkit/template/scaffold/project/cpp/qt5/qml/src/: CMakeLists.txt  main.cpp  version.ini
toolkit/template/scaffold/project/cpp/qt6/example/qml/: CMakeLists.txt  README.md  cookiecutter.json  main.cpp  main.qml  qml.qrc  {{project_slug.pascal_case}}.qml
toolkit/template/scaffold/project/python/: .drone.yml  AUTHORS.md  Makefile  README.md  cookiecutter.json  setup.cfg  setup.py
toolkit/template/scaffold/project/python/example/: README.md
toolkit/template/scaffold/project/python/factory/: {{factory.win32service}}.py
toolkit/template/scaffold/project/python/fastapi/: requirements-dev.txt  requirements.txt
toolkit/template/scaffold/project/python/package/: .gitignore  .pre-commit-config.yaml  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
toolkit/template/scaffold/project/python/package/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
toolkit/template/scaffold/project/python/package/.github/ISSUE_TEMPLATE/: question.md
toolkit/template/scaffold/project/python/package/.github/workflows/: python-publish.yml  python-test.yml  release-drafter.yml
toolkit/template/scaffold/project/python/package/docker/: Dockerfile  README.md
toolkit/template/scaffold/project/python/package/tests/: test_cli.py  test_hello.py
toolkit/template/scaffold/project/python/package/tests/config/: test_settings.py  test_settings_data.py
toolkit/template/scaffold/project/python/package/{{project_slug.snake_case}}/: __init__.py  cli.py  logger.py
toolkit/template/scaffold/project/python/package/{{project_slug.snake_case}}/config/: __init__.py  platform.py  registry.py  serialize.py  settings.py
toolkit/template/scaffold/project/python/prefect/: .drone.yml  requirements.txt
toolkit/template/scaffold/project/python/prefect/.prefect/: config.toml  profiles.toml
toolkit/template/scaffold/project/python/pyinstaller/: Makefile
toolkit/template/scaffold/project/python/tests/: __init__.py  test_cli.py
toolkit/template/scaffold/project/python/{{project_slug.snake_case}}/: cli.py  logger.py
toolkit/template/scaffold/project/python/{{project_slug.snake_case}}/config/: __init__.py
unified_command/: README.md  __init__.py  auto_unzip.py  command.py  version.py  youdao.py
user_agent/: __init__.py  command.py  generate.py
(+464 files in other folders)
