[metadata]
description_file = README.md

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = toolkit/_version.py
versionfile_build = toolkit/_version.py
tag_prefix = v
parentdir_prefix =

[flake8]
ignore = D203,W503
exclude = .git,__pycache__,build,dist,toolkit/_version.py,versioneer.py,toolkit/template
per-file-ignores =
    setup.py:E501
# Match black line-length
max-line-length = 127
extend-ignore =
    E203,

[isort]
skip = __init__.py
profile = black
skip_gitignore = True
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[coverage:run]
omit =
    tests/*
    main.py
    setup.py
    versioneer.py
    toolkit/_version.py
    toolkit/template/*

[mypy]
files=toolkit-py,test
ignore_missing_imports=true

[tool:pytest]
testpaths=tests/
