[metadata]
description_file = README.md

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = {{ project_slug.snake_case }}/_version.py
versionfile_build = {{ project_slug.snake_case }}/_version.py
tag_prefix = v
parentdir_prefix =

[flake8]
ignore = D203,W503
exclude = .git,__pycache__,build,dist,{{ project_slug.snake_case }}/_version.py,versioneer.py
per-file-ignores =
    setup.py:E501
# Match black line-length
max-line-length = 127
extend-ignore =
    E203,

[isort]
skip = __init__.py
profile = black
skip_gitignore = True
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[coverage:run]
omit =
    tests/*
    main.py
    setup.py
    versioneer.py
    {{ project_slug.snake_case }}/_version.py

[tool:pytest]
testpaths=tests/
